# Assignments-Compilatori

./: .gitignore  Prova.Optimized.bc  Prova.Optimized.ll  README.md  lineaguida
Algebraic-Identity/: .gitignore  aPass1.cpp
PrimoAssignement/: CMakeLists.txt  Pass.cpp  README.md
PrimoAssignement/Algebraic-Identity/: CMakeLists.txt  aPass1.cpp
PrimoAssignement/Algebraic-Identity/test/: Prova.ll  Prova.optimized.bc  Prova.optimized.ll
PrimoAssignement/Multi-Instruction-Optimization/: CMakeLists.txt  Optimized.bc  Optimized.ll  Pass3.cpp
PrimoAssignement/Multi-Instruction-Optimization/test/: Prova.ll
PrimoAssignement/Strenght-Reduction/: Pass2.cpp  Prova.Optimized.ll  README.md
PrimoAssignement/Strenght-Reduction/test/: Prova.ll  Prova.optimized.bc  Prova.optimized.ll
PrimoAssignement/Test/: AlgebraicIdentityTest.ll  MultiInstructionOperationTest.ll  StrenghtReductionTest.ll  Test.ll
QuartoAssignment/: CMakeLists.txt  Pass.cpp  README.md
QuartoAssignment/test/: definitive_test.ll  definitive_test_m2r.ll  single_couple.ll  single_couple__mem2reg.ll  test_loopfus_mem2reg.ll  test_manyloops.ll  testdipendence_mem2reg.ll  testdipendence_mem2reg3.ll  testiteration_mem2reg.ll
Strenght-Reduction/: .gitignore  CMakeLists.txt  Optimized.bc  Optimized.ll  Pass2.cpp
Strenght-Reduction/test/: Prova.ll
TerzoAssignment/: CMakeLists.txt  Pass.cpp  README.md
TerzoAssignment/Test/: Loop.ll  Loop.m2r.ll
